# routes/reviewsRoutes.js
@@ -8,7 +8,6 @@ router.post(
   isAuthenticated,
   /*
     #swagger.tags = ['Reviews']
-    #swagger.security = [{ "bearerAuth": [] }]
     #swagger.summary = 'Create a review'
     #swagger.parameters['body'] = {
       in: 'body',
@@ -48,7 +47,6 @@ router.put(
   isAuthenticated,
   /*
     #swagger.tags = ['Reviews']
-    #swagger.security = [{ "bearerAuth": [] }]
     #swagger.summary = 'Update review'
     #swagger.parameters['body'] = {
       in: 'body',
@@ -67,7 +65,6 @@ router.delete(
   '/:id',
   isAuthenticated,
   /* #swagger.tags = ['Reviews']
-     #swagger.security = [{ "bearerAuth": [] }]
      #swagger.summary = 'Delete review'
   */
   controller.deleteReview
